Changed main and background image & added styling.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <h1>Chuck Norris Joke Generator</h1>
-    <img src="https://api.chucknorris.io/img/chucknorris_logo_coloured_small@2x.png" alt="">
+    <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Forig01.deviantart.net%2F7a56%2Ff%2F2011%2F249%2F8%2Fd%2Fchuck_norris_by_normantweeter-d493apq.png&f=1&nofb=1" alt="">
     <button type="button" name="button">Get Chuck Norris Joke</button>
     <h2></h2>
     <script src="main.js"></script>
